# molecule-orbitals-software

./: Cargo.toml  workspace.code-workspace
lnk_test/: Cargo.toml
lnk_test/src/: main.rs
main/: Cargo.toml
main/src/: inject.js  main.rs  show_error.js
src/: inject.js  main.rs  show_error.js
wrapper/: Cargo.toml
wrapper/src/: main.rs
