[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
directories = "5.0.1"
env_logger = "0.10.0"
log = "0.4.20"
reqwest = "0.11.22"
rfd = "0.12.1"
serde_json = "1.0.107"
thirtyfour = "0.31.0"
tokio = { version = "1.33.0", features = ["full"] }
zip-extract = "0.1.2"

[features]
default = [ "firefox" ]
firefox = []
chrome = []
